patches/userlit
Bottom: d480c80cd42e4ad0f03a6712a777c7923bd433ed
Top:    cfc83a6ed6ea5cd0d6e74f1317930021b16dcbb1
Author: scott snyder <sss@karma>
Date:   2023-02-12 17:25:02 -0500

Fix warnings seen for user-defined literals.
Example:

constexpr double operator"" _degree(unsigned long long x) { 
  return 0.017453292519943295 * x;                   
}

void  TestTrackState()
{
  int foo  = 90_degree;
}


$ cppcheck  x.cc
Checking x.cc ...
x.cc:0:0: error: Internal Error. MathLib::toLongNumber: input was not completely consumed: 90_degree [cppcheckError]

^

This seems to have been reported:

https://trac.cppcheck.net/ticket/11438
